--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -4,7 +4,7 @@ body {
   	font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Oxygen",
     	"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     	sans-serif;
-	font-size: 14px;
+	font-size: 16px;
   	-webkit-font-smoothing: antialiased;
   	-moz-osx-font-smoothing: grayscale;
 }
@@ -55,7 +55,7 @@ body {
 }
 
 .sign-content h3 {
-	font-size: 16px;
+	font-size: 18px;
 	margin-bottom: 20px;
 	text-align: center;
 }
@@ -65,7 +65,7 @@ body {
 	width: 100%;
 	border: 1px solid lightgray;
 	border-radius: 7px;
-	font-size: 14px;
+	font-size: 16px;
 	padding: 1% 2% 1% 2%;
 	outline: none;
 	background: none;
@@ -74,7 +74,7 @@ body {
 
 .form-sign-input-label {
 	color: black;
-	font-size: 14px;
+	font-size: 16px;
 	margin: 5% 0 5% 0;
 }
 
@@ -100,7 +100,7 @@ body {
 	padding: 10px 20px 10px 20px;
 	border-radius: 20px;
 	cursor: pointer;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: bold;
 	border: none;
 }
@@ -122,17 +122,17 @@ body {
 }
 
 .select-label {
-	font-size: 14px;
+	font-size: 16px;
 	padding: 10px 10px 10px 10px;
 }
 
 .select-item {
-	font-size: 14px;
+	font-size: 16px;
 	padding: 8px 16px 8px 16px;
 }
 
 .sign-error-message {
-	font-size: 14px;
+	font-size: 16px;
 	color: brown;
 	background-color: pink;
 	padding: 2px 3px 2px 3px;
@@ -156,9 +156,10 @@ body {
 	margin: 0px 10px 0px 10px;
 }
 
-.post-edit-profil img {
+.post-edit-profil-image {
 	border-radius: 50%;
 	width: 50px;
+	height: 50px;
 }
 
 .post-edit-sub-container {
@@ -166,7 +167,7 @@ body {
 }
 
 .post-edit-text {
-	font-size: 16px;
+	font-size: 18px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
@@ -175,6 +176,7 @@ body {
 	resize: none;
 	border: none;
 	outline: none;
+	background-color: inherit;
 }
 
 .post-edit-text:hover,
@@ -218,7 +220,7 @@ body {
 	padding: 10px 20px 10px 20px;
 	border-radius: 10px;
 	cursor: pointer;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: bold;
 	background-color: black;
 	color: white;
@@ -239,7 +241,7 @@ body {
 	z-index: 9;
 	top: 9vh;
 	right: 10vw;
-	font-size: 14px;
+	font-size: 16px;
 	border-radius: 8px;
 	min-width: 200px;
 	border: 1px solid lightgray;
@@ -309,7 +311,7 @@ body {
 	height: 60vh;
 	overflow-y: auto;
 	overflow-x: hidden;
-	font-size: 14px;
+	font-size: 16px;
 }
 
 .notification-view-container {
@@ -357,7 +359,7 @@ body {
 
 .feed-navigation-search-bar-input {
 	border-radius: 3px;
-	font-size: 14px;
+	font-size: 16px;
 	outline: none;
 	padding: 10px 10px 10px 10px;
 	width: 20vw;
@@ -466,7 +468,7 @@ body {
 	width: 100%;
 	text-align: center;
 	padding: 10px 10px 10px 10px;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: bold;
 	background-color: white;
 	color: black;
@@ -561,15 +563,29 @@ body {
 	margin: 0 2px 0 2px;
 }
 
+.post-view-user-profil-preview {
+	display: none;
+	position: relative;
+	border: 1px solid lightgray;
+	box-shadow: 0 10px 25px rgba(80, 80, 80, .2);
+}
+
+.post-view-content-user-profile-picture:hover + .post-view-user-profil-preview,
+.post-view-content-content-header-user-infos-names:hover + .post-view-user-profil-preview {
+	display: flex;
+	flex-direction: column;
+}
+
 .post-view-content {
 	display: flex;
 	flex-direction: row;
 }
 
-.post-view-content-user-profile-picture {
+.post-view-content-user-profile-picture-image {
 	border-radius: 50%;
 	width: 60px;
 	height: 60px;
+	cursor: pointer;
 }	
 
 .post-view-content-content {
@@ -582,7 +598,7 @@ body {
 }
 
 .post-view-content-content-header-user-infos {
-
+	cursor: pointer;
 }
 
 .post-view-content-content-header-user-infos-names {
@@ -611,7 +627,7 @@ body {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	font-size: 14px;
+	font-size: 16px;
 }
 
 .post-view-content-content-post-infos-item-image {
@@ -937,6 +953,12 @@ body {
 	flex-direction: column;
 }
 
+.user-profil-view-header-infos-names-private {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
 .user-profil-view-header-infos-names {
 	display: flex;
 	flex-direction: column;
@@ -944,12 +966,17 @@ body {
 
 .user-profil-view-header-infos-names-names {
 	font-weight: bold;
-	font-size: 16px;
+	font-size: 18px;
 }
 
 .user-profil-view-header-infos-names-username {
 	color: gray;
-	font-size: 15px;
+	font-size: 17px;
+}
+
+.user-profil-view-header-infos-private-image {
+	width: 20px;
+	height: 20px;
 }
 
 .user-profil-view-header-infos-counters {
@@ -970,12 +997,12 @@ body {
 	font-weight: bold;
 }
 
-.user-profil-view-header-infos-bibliography {
+.user-profil-view-header-infos-biography {
 	white-space: pre-line;
 	margin-top: 20px;
 }
 
-.user-profil-view-header-infos-bibliography h4 {
+.user-profil-view-header-infos-biography h4 {
 	margin: 0;
 }
 
@@ -1023,6 +1050,6 @@ body {
 
 .user-profil-view-content-navigation-item span {
 	font-weight: bold;
-	font-size: 14px;
+	font-size: 16px;
 	margin-top: 20px;
 }
