--- a/ducky/src/index.css
+++ b/ducky/src/index.css
@@ -1276,3 +1276,47 @@ body {
 .poll-editor-actions-content-item:hover {
 	background-color: pink;
 }
+
+
+.media-edit-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+.media-edit-item-container {
+	display: flex;
+	flex-direction: column;
+	width: 95%;
+	border-radius: 8px;
+	border: 1px solid lightgray;
+	margin: 5px 5px 5px 5px;
+}
+
+.media-edit-item-sub-container {
+	display: flex;
+	flex-direction: row;
+}
+
+.media-edit-item-content {
+	width: 100%;
+	border-radius: 8px;
+}
+
+.media-edit-item-delete {
+	position: relative;
+	right: 35px;
+	top: 5px;
+	width: 20px;
+	height: 20px;
+	padding: 5px 5px 5px 5px;
+	border-radius: 50%;
+	border: 1px solid lightgray;
+	background-color: white;
+}
+
+.media-edit-item-description-text {
+	border: none;
+	outline: none;
+	width: 100%;
+	text-align: center;
+}
